# trading212-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.cursor/rules/: python.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: config.py  exceptions.py  mcp_server.py  models.py  prompts.py  resources.py  server.py  tools.py
src/utils/: client.py  data_store.py  hishel_config.py  rate_limiter.py  retry.py  schema.sql
tests/: __init__.py  conftest.py  test_client.py  test_data_store.py  test_hishel_config.py  test_prompts.py  test_rate_limiter.py  test_retry.py  test_tools.py
tests/fixtures/: __init__.py
